--- a/customer_loyalty_core1/views/loyalty_history_views.xml
+++ b/customer_loyalty_core1/views/loyalty_history_views.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <record id="view_loyalty_history_tree" model="ir.ui.view">
-        <field name="name">loyalty.history.tree</field>
-        <field name="model">loyalty.history</field>
-        <field name="arch" type="xml">
-            <tree>
-                <field name="partner_id"/>
-                <field name="change"/>
-                <field name="reason"/>
-                <field name="date"/>
-                <field name="origin"/>
-            </tree>
-        </field>
-    </record>
+    <field name="name">loyalty.history.tree</field>
+    <field name="model">loyalty.history</field>
+    <field name="type">tree</field>
+    <field name="arch" type="xml">
+        <tree>
+            <field name="partner_id"/>
+            <field name="change"/>
+            <field name="reason"/>
+            <field name="date"/>
+            <field name="origin"/>
+        </tree>
+    </field>
+</record>
+
 
     <record id="view_loyalty_history_form" model="ir.ui.view">
         <field name="name">loyalty.history.form</field>
